--- a/index.html
+++ b/index.html
@@ -1,21 +1,128 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <style>
-        h1{
-            text-align: center;
-        }
-    </style>
-    <title>MySite</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="alert alert-success" role="alert">
-        <h1 class="alert-heading">I am Abhishek !!!</h1>
-        <hr>
+  <header>
+    <div class="container">
+      <div class="header-left">
+        <h1>My Portfolio</h1>
       </div>
+      <div class="header-right">
+        <nav>
+          <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+        <button class="menu-toggle">
+          <i class="fas fa-bars"></i>
+        </button>
+      </div>
+    </div>
+  </header>
+  <main>
+    <section id="about" class="section">
+      <div class="container">
+        <h2>About</h2>
+        <div class="about-section">
+          <img src="profile.jpg" alt="Profile Picture">
+          <div class="about-text">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim, leo ac dictum dictum, lacus turpis porta mauris, quis scelerisque odio diam vel nisi. Maecenas vel lacus quis nisi vestibulum cursus. Suspendisse viverra nunc a massa pulvinar, ac ultricies mauris tincidunt.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="projects" class="section">
+      <div class="container">
+        <h2>Projects</h2>
+        <div class="project-grid">
+          <div class="project">
+            <img src="project1.jpg" alt="Project 1">
+            <h3>Project 1</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim, leo ac dictum dictum, lacus turpis porta mauris, quis scelerisque odio diam vel nisi.</p>
+          </div>
+          <div class="project">
+            <img src="project2.jpg" alt="Project 2">
+            <h3>Project 2</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim, leo ac dictum dictum, lacus turpis porta mauris, quis sceleris
+  <section id="skills" class="section">
+    <div class="container">
+      <h2>Skills</h2>
+      <div class="skills-section">
+        <div class="skill">
+          <h3>Skill 1</h3>
+          <div class="skill-level" style="width: 75%"></div>
+        </div>
+        <div class="skill">
+          <h3>Skill 2</h3>
+          <div class="skill-level" style="width: 50%"></div>
+        </div>
+        <div class="skill">
+          <h3>Skill 3</h3>
+          <div class="skill-level" style="width: 25%"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="education" class="section">
+    <div class="container">
+      <h2>Education</h2>
+      <div class="education-section">
+        <div class="education">
+          <h3>Degree 1</h3>
+          <h4>Institution 1</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim, leo ac dictum dictum, lacus turpis porta mauris, quis scelerisque odio diam vel nisi.</p>
+        </div>
+        <div class="education">
+          <h3>Degree 2</h3>
+          <h4>Institution
+  <section id="experience" class="section">
+    <div class="container">
+      <h2>Experience</h2>
+      <div class="experience-section">
+        <div class="experience">
+          <h3>Job Title 1</h3>
+          <h4>Company 1</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim, leo ac dictum dictum, lacus turpis porta mauris, quis scelerisque odio diam vel nisi.</p>
+        </div>
+        <div class="experience">
+          <h3>Job Title 2</h3>
+          <h4>Company 2</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim, leo ac dictum dictum, lacus turpis porta mauris, quis scelerisque odio diam vel nisi.</p>
+        </div>
+        <div class="experience">
+          <h3>Job Title 3</h3>
+          <h4>Company 3</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim, leo ac dictum dictum, lacus turpis porta mauris, quis scelerisque odio diam vel nisi.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="contact" class="section">
+    <div class="container">
+      <h2>Contact</h2>
+      <p>Want to get in touch? You can reach me at:</p>
+      <ul>
+        <li>Email: example@example.com</li>
+        <li>Phone: 555-555-5555</li>
+      </ul>
+    </div>
+  </section>
+  <footer>
+    <div class="container">
+      <p>Copyright 2022</p>
+    </div>
+  </footer>
+  <script src="script.js"></script>
+  <script src="https://kit.fontawesome.com/yourcode.js"></script>
 </body>
 </html>
