--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="container">
         <h2>About</h2>
         <div class="about-section">
-          <img src="profile.jpg" alt="Profile Picture">
+          <img src="photo.jpeg" alt="Profile Picture">
           <div class="about-text">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim, leo ac dictum dictum, lacus turpis porta mauris, quis scelerisque odio diam vel nisi. Maecenas vel lacus quis nisi vestibulum cursus. Suspendisse viverra nunc a massa pulvinar, ac ultricies mauris tincidunt.</p>
           </div>
